test/core/errors/default_values_error/zs/range_decimal_initializer_error.zs
package range_decimal_initializer_error;

struct WrongDecimalInitializer
{
    int8    wrongDecimalInitializer = 0xDEAD;
};
